--- a/Styles/estilos.css
+++ b/Styles/estilos.css
@@ -1,21 +1,23 @@
 body{
-    background-color: #181616;
+    margin: 0 auto;
+    color: #FFF;
+    min-height: 100vh;
+    background-color: #131928;
 }
 
-.card-img-top {
-    width: 100%;
-    height: 100%;
+p{
+    margin: 10px
+}
+.table {
+    background-color: antiquewhite;
 }
 
-.card{
-    width: 200px;
-    height: 490px;
-    margin: 50px;
+.card {
+    background-color: #131928;
+    border-style: groove;
+    border-color: antiquewhite;
 }
 
-.imagenSup{
-    margin: 5px;
-    width: 355px;
-    height: 300px;
-    align-items: center;
+.card-img {
+    border-color: antiquewhite;
 }
